PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2008, PHP 5.2.6
- Fixed weired behavior in CGI parameter parsing. (Dmitry, Hannes Magnusson)
- Fixed a safe_mode bypass in cURL identified by Maksymilian Arciemowicz.
  (Ilia)

- Fixed bug #43793 (zlib filter is unable to auto-detect gzip/zlib file headers).
  (Greg)
- Fixed bug #43703 (Signature compatibility check broken). (Dmitry)
- Fixed bug #43663 (Extending PDO class with a __call() function doesn't work). 
  (David Soria Parra)
- Fixed bug #43647 (Make FindFile use PATH_SEPARATOR instead of ";"). (Ilia)
- Fixed bug #43635 (mysql extension ingores INI settings on NULL values
  passed to mysql_connect()). (Ilia)
- Fixed bug #43620 (Workaround for a bug inside libcurl 7.16.2 that can result 
  in a crash). (Ilia)
- Fixed bug #43606 (define missing depencies of the exif extension).
  (crrodriguez at suse dot de)
- Fixed bug #43589 (a possible infinite loop in bz2_filter.c). (Greg)
- Fixed bug #43580 (removed bogus declaration of a non-existent php_is_url()  
  function). (Ilia)
- Fixed bug #43533 (escapeshellarg('') returns null). (Ilia)
- Fixed bug #43522 (stream_get_line() eats additional characters). (Felipe,
  Ilia, Tony)
- Fixed bug #43495 (array_merge_recursive() crashes with recursive arrays).
  (Ilia)
- Fixed bug #43498 (file_exists() on a proftpd server got SIZE not
  allowed in ASCII mode). (Ilia, crrodriguez at suse dot de)
- Fixed bug #43493 (pdo_pgsql does not send username on connect when password
  is not available). (Ilia)
- Fixed bug #43482 (array_pad() does not warn on very small pad numbers).
  (Ilia)
- Fixed bug #43457 (Prepared statement with incorrect parms doesn't throw 
  exception with pdo_pgsql driver). (Ilia)
- Fixed bug #43450 (Memory leak on some functions with implicit object 
  __toString() call). (David C.)